# inkris

./: README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  feedback-log.text  nginx.conf  pyproject.toml  server.py
backend/alembic/: env.py
backend/alembic/versions/: 2026_02_18_2034-71d736d805c6_initial_migration.py  2026_02_18_2355-1814ba4c3eb3_add_quota_model.py  2026_02_19_1135-0c6718bf1564_create_file_model.py  2026_02_20_1344-dae71faa437f_update_quota_metrics.py  2026_02_20_2328-9aef779df382_create_conversation_and_.py  2026_02_22_1429-e54376c58563_remove_runtime_context_from_.py  2026_02_23_1829-4a3ae2fe6c68_update_quota_limits_add_web_scraping_.py  2026_03_03_1049-49588a82f793_create_excel_metadata_model.py
backend/app/: README.md  config.py  main.py
backend/app/agents/: README.md  llms.py  orchestrator.py  prompts.py  runtime_context.py  streaming.py
backend/app/core/: README.md  auth.py  context.py  deps.py  enums.py  error_registry.py  errors.py  files.py  logger.py  security.py
backend/app/db/: duckdb.py  model_registry.py  session.py
backend/app/models/: base.py  conversation.py  excel_metadata.py  file.py  quota.py  refresh_token.py  user.py
backend/app/schemas/: chat.py  file.py  usage.py  user.py
backend/app/services/: README.md  chats.py  file_processor.py  files.py  users.py
backend/app/storage/: base.py  s3_provider.py
backend/app/tasks/: README.md  __init__.py  celery.py  file_tasks.py  queue.py
backend/certs/: fullchain.pem  privkey.pem
(+60 files in other folders)
